src/main/generated/com/github/kristinjeanna/scedsl/SceDslParser.java
// Generated from com/github/kristinjeanna/scedsl/SceDsl.g4 by ANTLR 4.9.3
package com.github.kristinjeanna.scedsl;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SceDslParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, OR=2, XOR=3, NOT=4, CONTAINS=5, STARTSWITH=6, ENDSWITH=7, TRUE=8, 
		FALSE=9, STRING=10, SINGLE_QUOTE=11, COMMA=12, LPAREN=13, RPAREN=14, WS=15;
	public static final int
		RULE_expression = 0, RULE_function = 1, RULE_explicitBoolean = 2, RULE_and = 3, 
		RULE_or = 4, RULE_xor = 5, RULE_not = 6, RULE_contains = 7, RULE_startsWith = 8, 
		RULE_endsWith = 9, RULE_booleanTrue = 10, RULE_booleanFalse = 11, RULE_quotedString = 12, 
		RULE_string = 13;
	private static String[] makeRuleNames() {
		return new String[] {
			"expression", "function", "explicitBoolean", "and", "or", "xor", "not", 
			"contains", "startsWith", "endsWith", "booleanTrue", "booleanFalse", 
			"quotedString", "string"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'and'", "'or'", "'xor'", "'not'", "'contains'", "'startsWith'", 
			"'endsWith'", "'true'", "'false'", null, "'''", "','", "'('", "')'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "OR", "XOR", "NOT", "CONTAINS", "STARTSWITH", "ENDSWITH", 
			"TRUE", "FALSE", "STRING", "SINGLE_QUOTE", "COMMA", "LPAREN", "RPAREN", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SceDsl.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SceDslParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ExpressionContext extends ParserRuleContext {
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public ExplicitBooleanContext explicitBoolean() {
			return getRuleContext(ExplicitBooleanContext.class,0);
		}
		public QuotedStringContext quotedString() {
			return getRuleContext(QuotedStringContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_expression);
		try {
			setState(31);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case AND:
			case OR:
			case XOR:
			case NOT:
			case CONTAINS:
			case STARTSWITH:
			case ENDSWITH:
				enterOuterAlt(_localctx, 1);
				{
				setState(28);
				function();
				}
				break;
			case TRUE:
			case FALSE:
				enterOuterAlt(_localctx, 2);
				{
				setState(29);
				explicitBoolean();
				}
				break;
			case SINGLE_QUOTE:
				enterOuterAlt(_localctx, 3);
				{
				setState(30);
				quotedString();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FunctionContext extends ParserRuleContext {
		public AndContext and() {
			return getRuleContext(AndContext.class,0);
		}
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public XorContext xor() {
			return getRuleContext(XorContext.class,0);
		}
		public NotContext not() {
			return getRuleContext(NotContext.class,0);
		}
		public ContainsContext contains() {
			return getRuleContext(ContainsContext.class,0);
		}
		public StartsWithContext startsWith() {
			return getRuleContext(StartsWithContext.class,0);
		}
		public EndsWithContext endsWith() {
			return getRuleContext(EndsWithContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function);
		try {
			setState(40);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case AND:
				enterOuterAlt(_localctx, 1);
				{
				setState(33);
				and();
				}
				break;
			case OR:
				enterOuterAlt(_localctx, 2);
				{
				setState(34);
				or();
				}
				break;
			case XOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(35);
				xor();
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 4);
				{
				setState(36);
				not();
				}
				break;
			case CONTAINS:
				enterOuterAlt(_localctx, 5);
				{
				setState(37);
				contains();
				}
				break;
			case STARTSWITH:
				enterOuterAlt(_localctx, 6);
				{
				setState(38);
				startsWith();
				}
				break;
			case ENDSWITH:
				enterOuterAlt(_localctx, 7);
				{
				setState(39);
				endsWith();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExplicitBooleanContext extends ParserRuleContext {
		public BooleanTrueContext booleanTrue() {
			return getRuleContext(BooleanTrueContext.class,0);
		}
		public BooleanFalseContext booleanFalse() {
			return getRuleContext(BooleanFalseContext.class,0);
		}
		public ExplicitBooleanContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_explicitBoolean; }
	}

	public final ExplicitBooleanContext explicitBoolean() throws RecognitionException {
		ExplicitBooleanContext _localctx = new ExplicitBooleanContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_explicitBoolean);
		try {
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TRUE:
				enterOuterAlt(_localctx, 1);
				{
				setState(42);
				booleanTrue();
				}
				break;
			case FALSE:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				booleanFalse();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(SceDslParser.AND, 0); }
		public TerminalNode LPAREN() { return getToken(SceDslParser.LPAREN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(SceDslParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SceDslParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SceDslParser.COMMA, i);
		}
		public AndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_and; }
	}

	public final AndContext and() throws RecognitionException {
		AndContext _localctx = new AndContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_and);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			match(AND);
			setState(47);
			match(LPAREN);
			setState(48);
			expression();
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(49);
				match(COMMA);
				setState(50);
				expression();
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrContext extends ParserRuleContext {
		public TerminalNode OR() { return getToken(SceDslParser.OR, 0); }
		public TerminalNode LPAREN() { return getToken(SceDslParser.LPAREN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(SceDslParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SceDslParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SceDslParser.COMMA, i);
		}
		public OrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_or; }
	}

	public final OrContext or() throws RecognitionException {
		OrContext _localctx = new OrContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_or);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			match(OR);
			setState(59);
			match(LPAREN);
			setState(60);
			expression();
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(61);
				match(COMMA);
				setState(62);
				expression();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class XorContext extends ParserRuleContext {
		public TerminalNode XOR() { return getToken(SceDslParser.XOR, 0); }
		public TerminalNode LPAREN() { return getToken(SceDslParser.LPAREN, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode RPAREN() { return getToken(SceDslParser.RPAREN, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SceDslParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SceDslParser.COMMA, i);
		}
		public XorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_xor; }
	}

	public final XorContext xor() throws RecognitionException {
		XorContext _localctx = new XorContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_xor);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(XOR);
			setState(71);
			match(LPAREN);
			setState(72);
			expression();
			setState(77);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(73);
				match(COMMA);
				setState(74);
				expression();
				}
				}
				setState(79);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(80);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NotContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(SceDslParser.NOT, 0); }
		public TerminalNode LPAREN() { return getToken(SceDslParser.LPAREN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SceDslParser.RPAREN, 0); }
		public NotContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_not; }
	}

	public final NotContext not() throws RecognitionException {
		NotContext _localctx = new NotContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_not);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			match(NOT);
			setState(83);
			match(LPAREN);
			setState(84);
			expression();
			setState(85);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ContainsContext extends ParserRuleContext {
		public TerminalNode CONTAINS() { return getToken(SceDslParser.CONTAINS, 0); }
		public TerminalNode LPAREN() { return getToken(SceDslParser.LPAREN, 0); }
		public QuotedStringContext quotedString() {
			return getRuleContext(QuotedStringContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SceDslParser.RPAREN, 0); }
		public ContainsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_contains; }
	}

	public final ContainsContext contains() throws RecognitionException {
		ContainsContext _localctx = new ContainsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_contains);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(87);
			match(CONTAINS);
			setState(88);
			match(LPAREN);
			setState(89);
			quotedString();
			setState(90);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StartsWithContext extends ParserRuleContext {
		public TerminalNode STARTSWITH() { return getToken(SceDslParser.STARTSWITH, 0); }
		public TerminalNode LPAREN() { return getToken(SceDslParser.LPAREN, 0); }
		public QuotedStringContext quotedString() {
			return getRuleContext(QuotedStringContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SceDslParser.RPAREN, 0); }
		public StartsWithContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_startsWith; }
	}

	public final StartsWithContext startsWith() throws RecognitionException {
		StartsWithContext _localctx = new StartsWithContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_startsWith);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(STARTSWITH);
			setState(93);
			match(LPAREN);
			setState(94);
			quotedString();
			setState(95);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EndsWithContext extends ParserRuleContext {
		public TerminalNode ENDSWITH() { return getToken(SceDslParser.ENDSWITH, 0); }
		public TerminalNode LPAREN() { return getToken(SceDslParser.LPAREN, 0); }
		public QuotedStringContext quotedString() {
			return getRuleContext(QuotedStringContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(SceDslParser.RPAREN, 0); }
		public EndsWithContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_endsWith; }
	}

	public final EndsWithContext endsWith() throws RecognitionException {
		EndsWithContext _localctx = new EndsWithContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_endsWith);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97);
			match(ENDSWITH);
			setState(98);
			match(LPAREN);
			setState(99);
			quotedString();
			setState(100);
			match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanTrueContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(SceDslParser.TRUE, 0); }
		public BooleanTrueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanTrue; }
	}

	public final BooleanTrueContext booleanTrue() throws RecognitionException {
		BooleanTrueContext _localctx = new BooleanTrueContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_booleanTrue);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(TRUE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanFalseContext extends ParserRuleContext {
		public TerminalNode FALSE() { return getToken(SceDslParser.FALSE, 0); }
		public BooleanFalseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanFalse; }
	}

	public final BooleanFalseContext booleanFalse() throws RecognitionException {
		BooleanFalseContext _localctx = new BooleanFalseContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_booleanFalse);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			match(FALSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuotedStringContext extends ParserRuleContext {
		public List<TerminalNode> SINGLE_QUOTE() { return getTokens(SceDslParser.SINGLE_QUOTE); }
		public TerminalNode SINGLE_QUOTE(int i) {
			return getToken(SceDslParser.SINGLE_QUOTE, i);
		}
		public StringContext string() {
			return getRuleContext(StringContext.class,0);
		}
		public QuotedStringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quotedString; }
	}

	public final QuotedStringContext quotedString() throws RecognitionException {
		QuotedStringContext _localctx = new QuotedStringContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_quotedString);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(SINGLE_QUOTE);
			setState(107);
			string();
			setState(108);
			match(SINGLE_QUOTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringContext extends ParserRuleContext {
		public TerminalNode STRING() { return getToken(SceDslParser.STRING, 0); }
		public StringContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_string; }
	}

	public final StringContext string() throws RecognitionException {
		StringContext _localctx = new StringContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_string);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(STRING);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}